--- a/app/src/main/res/layout/janela_tres_layout.xml
+++ b/app/src/main/res/layout/janela_tres_layout.xml
@@ -121,27 +121,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:height="50dp"
-            android:background="@color/colorAccent" />
-
-        <Button
+        <View
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:height="50dp"
             android:background="@color/colorAccent" />
 
-        <Button
+        <View
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
@@ -149,7 +143,8 @@
             android:height="50dp"
             android:background="@color/colorAccent" />
 
-        <Button
+        <View
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
@@ -157,18 +152,27 @@
             android:height="50dp"
             android:background="@color/colorAccent" />
 
-        <Button
+        <View
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:height="50dp"
+            android:background="@color/colorAccent" />
+
+        <View
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:height="30dp"
             android:background="@color/colorAccent" />
     </LinearLayout>
 
-    <Button
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:background="@color/cordaCaixa"
         android:padding="20dp" />
