--- a/app/src/main/res/layout/janela_tres_layout.xml
+++ b/app/src/main/res/layout/janela_tres_layout.xml
@@ -176,4 +176,4 @@
         android:layout_marginTop="10dp"
         android:background="@color/cordaCaixa"
         android:padding="20dp" />
-</>
+</LinearLayout>
